--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ disallow_untyped_defs = true
 disallow_any_unimported = true
 no_implicit_optional = true
 check_untyped_defs = true
-warn_return_any = true
+# warn_return_any = true
 warn_unused_ignores = true
 show_error_codes = true
 warn_unreachable = true
